--- a/src/app/components/manage-drug/manage-drug.component.html
+++ b/src/app/components/manage-drug/manage-drug.component.html
@@ -22,7 +22,7 @@
       </mat-expansion-panel-header>
       <div >
         <mat-form-field>
-          <mat-label>Brand Name</mat-label>
+          <mat-label>Generic Name</mat-label>
           <input matInput [(ngModel)]="drug.genericName">
         </mat-form-field>
       </div>
